--- a/indexing/connector/sdk/list-traversal/pom.xml
+++ b/indexing/connector/sdk/list-traversal/pom.xml
@@ -37,13 +37,13 @@
     <maven.compiler.source>1.8</maven.compiler.source>
   </properties>
   <dependencies>
-    <!-- [START indexing-sdk-maven] -->
+    <!-- [START cloud_search_indexing_sdk_maven] -->
     <dependency>
       <groupId>com.google.enterprise.cloudsearch</groupId>
       <artifactId>google-cloudsearch-indexing-connector-sdk</artifactId>
       <version>v1-0.0.1</version>
     </dependency>
-    <!-- [END indexing-sdk-maven] -->
+    <!-- [END cloud_search_indexing_sdk_maven] -->
 
     <!-- Test dependencies -->
     <dependency>
