--- a/indexing/schema/pom.xml
+++ b/indexing/schema/pom.xml
@@ -33,14 +33,14 @@
     <artifactId>shared-configuration</artifactId>
     <version>1.0.9</version>
   </parent>
-  
+
   <properties>
     <maven.compiler.target>1.8</maven.compiler.target>
     <maven.compiler.source>1.8</maven.compiler.source>
   </properties>
 
   <dependencies>
-    <!-- [START api-client-maven] -->
+    <!-- [START cloud_search_java_api_maven] -->
     <dependency>
       <groupId>com.google.api-client</groupId>
       <artifactId>google-api-client</artifactId>
@@ -49,14 +49,14 @@
     <dependency>
       <groupId>com.google.apis</groupId>
       <artifactId>google-api-services-cloudsearch</artifactId>
-      <version>v1beta1-rev0-1.23.0</version>
+      <version>v1-rev0-1.23.0</version>
     </dependency>
     <dependency>
       <groupId>com.google.apis</groupId>
       <artifactId>google-api-services-cloudsearch-bytestream</artifactId>
       <version>v1-rev0-1.23.0-bytestream</version>
     </dependency>
-    <!-- [END api-client-maven] -->
+    <!-- [END cloud_search_java_api_maven] -->
 
     <dependency>
       <groupId>com.beust</groupId>
