Rename sourceId -> identitySourceId in sample config
Change-Id: I061792c28745bf44303b18e63df536da13064806

--- a/identity/connector/sdk/full-sync/sample-config.properties
+++ b/identity/connector/sdk/full-sync/sample-config.properties
@@ -1,6 +1,6 @@
 # Required properties for accessing data source
 # (These values are created by the admin before running the connector)
-api.sourceId=
+api.identitySourceId=
 api.serviceAccountPrivateKeyFile=
 api.customerId=
 
