Apply domain public ACL for synonyms
Additional changes :
1. Bumped SDK version to v1-0.0.3
2. Exclude guava from truth to avoid conflict with version available
with SDK.

--- a/indexing/connector/sdk/acls/pom.xml
+++ b/indexing/connector/sdk/acls/pom.xml
@@ -44,7 +44,7 @@
     <dependency>
       <groupId>com.google.enterprise.cloudsearch</groupId>
       <artifactId>google-cloudsearch-indexing-connector-sdk</artifactId>
-      <version>v1-0.0.2</version>
+      <version>v1-0.0.3</version>
     </dependency>
     <!-- [END cloud_search_indexing_sdk_maven] -->
 
@@ -60,6 +60,12 @@
       <artifactId>truth</artifactId>
       <version>0.42</version>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>com.google.jimfs</groupId>
