--- a/indexing/connector/sdk/list-traversal/pom.xml
+++ b/indexing/connector/sdk/list-traversal/pom.xml
@@ -33,7 +33,7 @@
     <dependency>
       <groupId>com.google.enterprise.cloudsearch</groupId>
       <artifactId>google-cloudsearch-indexing-connector-sdk</artifactId>
-      <version>v1-0.0.2</version>
+      <version>v1-0.0.3</version>
     </dependency>
 
     <!-- Test dependencies -->
@@ -48,6 +48,12 @@
       <artifactId>truth</artifactId>
       <version>0.40</version>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 </project>
