Updating readme and index to include SSO sample

--- a/serving/widget/public/config.json
+++ b/serving/widget/public/config.json
@@ -1,4 +1,5 @@
 {
-  "clientId": "38646341275-gfm7dlf3ikqdj6qdlc2im6onenjd11q8.apps.googleusercontent.com",
-  "searchAppId": "searchapplications/default"
+  "clientId": "[client-id]",
+  "searchAppId": "searchapplications/default",
+  "domain": "[domain]"
 }
