--- a/indexing/connector/sdk/dictionary-connector/sample-config.properties
+++ b/indexing/connector/sdk/dictionary-connector/sample-config.properties
@@ -12,3 +12,6 @@ structuredData.localSchema=schema.json
 
 # Number of synthetic documents to create
 dictionary.file=dictionary.csv
+
+# Whether synonyms should be specific to search applications containing them
+dictionary.attachedToSearchApp=false
